--- a/Offline 3/Recommandation System.ipynb
+++ b/Offline 3/Recommandation System.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,26 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-7.82,  8.79, -9.66, ..., 99.  , 99.  , 99.  ],\n",
-       "       [ 4.08, -0.29,  6.36, ...,  0.34, -4.32,  1.07],\n",
-       "       [99.  , 99.  , 99.  , ..., 99.  , 99.  , 99.  ],\n",
-       "       ...,\n",
-       "       [99.  , 99.  , 99.  , ..., 99.  , 99.  , 99.  ],\n",
-       "       [99.  , 99.  , 99.  , ..., 99.  , 99.  , 99.  ],\n",
-       "       [ 2.43,  2.67, -3.98, ..., 99.  , 99.  , 99.  ]])"
-      ]
-     },
-     "execution_count": 337,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = df.values\n",
     "X"
@@ -52,38 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         74\n",
-       "1        100\n",
-       "2         49\n",
-       "3         48\n",
-       "4         91\n",
-       "        ... \n",
-       "24978    100\n",
-       "24979     91\n",
-       "24980     39\n",
-       "24981     37\n",
-       "24982     72\n",
-       "Name: 0, Length: 24983, dtype: int64"
-      ]
-     },
-     "execution_count": 338,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "valid_rating_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,18 +181,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30593032.80643414\n",
-      "14421254.392713971\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "als(train_set,10,0.1,0.1,0.0005)"
+    "latent_factors = [5,10,20,40]\n",
+    "lambda_values = [10.0,1.0,0.1,0.01]\n",
+    "lowest_error = None\n",
+    "best_k = None\n",
+    "best_l_u = None\n",
+    "best_l_v = None\n",
+    "best_U = None\n",
+    "best_V = None\n",
+    "\n",
+    "for k in latent_factors:\n",
+    "    for l_u in lambda_values:\n",
+    "        for l_v in lambda_values:\n",
+    "            U,V = als(train_set,k,l_u,l_v,0.00005)\n",
+    "            curr_error = r_error(train_set,U,V)\n",
+    "            print(k,l_u,l_v,curr_error)\n",
+    "            if lowest_error is None or lowest_error>curr_error:\n",
+    "                lowest_error = curr_error\n",
+    "                best_k = k\n",
+    "                best_l_u = l_u\n",
+    "                best_l_v = l_v\n",
+    "                best_U = U\n",
+    "                best_V = V\n",
+    "\n",
+    "output = open('model.pk1','wb')\n",
+    "pickle.dump(U,output,pickle.HIGHEST_PROTOCOL)\n",
+    "pickle.dump(V,output,pickle.HIGHEST_PROTOCOL)\n",
+    "output.close()      "
    ]
   },
   {
@@ -258,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
