--- a/MulticlassLogisticRegression/Multi Class Logistic Regression.ipynb
+++ b/MulticlassLogisticRegression/Multi Class Logistic Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "            \n",
     "            derivativeValue = instance*(actualValue-predictedValue)\n",
     "            delta += learning_rate*derivativeValue\n",
-    "            logLikelihood = np.dot(actualValue,predictedValue) + np.dot(1-actualValue,np.log(1-predictedValue))\n",
+    "            logLikelihood = np.dot(actualValue,np.log(predictedValue)) + np.dot(1-actualValue,np.log(1-predictedValue))\n",
     "            totalLogLikelihood += logLikelihood\n",
     "            \n",
     "        theta = theta + delta\n",
@@ -98,74 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "0\n",
-      "-265.8883083359679\n",
-      "[[-0.025      -0.025      -0.025     ]\n",
-      " [-0.19354725  0.10028855 -0.602869  ]\n",
-      " [ 0.07345308 -0.32175738 -0.12694417]\n",
-      " [-0.14645753  0.10352738 -0.45869877]]\n",
-      "100\n",
-      "153.00822075033423\n",
-      "[[-2.12554    -0.10293206  0.42194603]\n",
-      " [-0.38388263  0.29062987 -0.96481727]\n",
-      " [ 0.53815812 -1.35449296  1.12754043]\n",
-      " [ 0.24491806  0.31151287 -0.76695238]]\n",
-      "200\n",
-      "221.8410341113313\n",
-      "[[-3.70716028 -0.12082556  0.58092965]\n",
-      " [-0.26220563  0.31527789 -1.19780382]\n",
-      " [ 0.69985025 -1.46523062  1.37190042]\n",
-      " [ 0.36270729  0.33489137 -0.8732131 ]]\n",
-      "300\n",
-      "245.3046107136762\n",
-      "[[-4.73598652 -0.13374779  0.69660809]\n",
-      " [-0.11102477  0.33241813 -1.35582235]\n",
-      " [ 0.72577134 -1.54202539  1.52625126]\n",
-      " [ 0.34787202  0.350869   -0.92728519]]\n",
-      "400\n",
-      "255.85132131970616\n",
-      "[[-5.48282872 -0.14397066  0.79078018]\n",
-      " [-0.12382493  0.34563    -1.47833264]\n",
-      " [ 0.74405567 -1.60108261  1.64061587]\n",
-      " [ 0.24011863  0.36303494 -0.96122535]]\n",
-      "500\n",
-      "263.7218756584707\n",
-      "[[-5.9867499  -0.15247889  0.87153377]\n",
-      " [-0.04674852  0.35640742 -1.57934947]\n",
-      " [ 0.80081277 -1.64917964  1.73201631]\n",
-      " [ 0.21932477  0.37286745 -0.98509536]]\n",
-      "600\n",
-      "267.71005704288274\n",
-      "[[-6.41538351 -0.15979374  0.9429102 ]\n",
-      " [-0.01702998  0.36552306 -1.6656888 ]\n",
-      " [ 0.84540642 -1.68981205  1.80840113]\n",
-      " [ 0.20156911  0.3811226  -1.00319978]]\n",
-      "700\n",
-      "270.8302053814598\n",
-      "[[-6.79552404e+00 -1.66226424e-01  1.00727012e+00]\n",
-      " [ 2.61045873e-03  3.73429808e-01 -1.74125802e+00]\n",
-      " [ 8.85698880e-01 -1.72502408e+00  1.87415529e+00]\n",
-      " [ 1.93832334e-01  3.88239555e-01 -1.01770463e+00]]\n",
-      "800\n",
-      "273.34822593952475\n",
-      "[[-7.13706804 -0.17197845  1.06613355]\n",
-      " [ 0.01744399  0.38041643 -1.80853759]\n",
-      " [ 0.92227999 -1.7561167   1.93196559]\n",
-      " [ 0.19045548  0.39449616 -1.02981809]]\n",
-      "900\n",
-      "275.4254818542708\n",
-      "[[-7.44720523 -0.17718816  1.12054676]\n",
-      " [ 0.02959287  0.3866786  -1.86921519]\n",
-      " [ 0.95566953 -1.78397002  1.98360254]\n",
-      " [ 0.18906938  0.40007944 -1.04026471]]\n"
-     ]
+     "name": "stdout",
+     "text": "0\n-623.8324625039492\n[[-0.025      -0.025      -0.025     ]\n [-0.19354725  0.10028855 -0.602869  ]\n [ 0.07345308 -0.32175738 -0.12694417]\n [-0.14645753  0.10352738 -0.45869877]]\n100\n-148.41672221769613\n[[-2.12554    -0.10293206  0.42194603]\n [-0.38388263  0.29062987 -0.96481727]\n [ 0.53815812 -1.35449296  1.12754043]\n [ 0.24491806  0.31151287 -0.76695238]]\n200\n-83.18568787946295\n[[-3.70716028 -0.12082556  0.58092965]\n [-0.26220563  0.31527789 -1.19780382]\n [ 0.69985025 -1.46523062  1.37190042]\n [ 0.36270729  0.33489137 -0.8732131 ]]\n300\n-60.56543487174008\n[[-4.73598652 -0.13374779  0.69660809]\n [-0.11102477  0.33241813 -1.35582235]\n [ 0.72577134 -1.54202539  1.52625126]\n [ 0.34787202  0.350869   -0.92728519]]\n400\n-45.00761402332528\n[[-5.48282872 -0.14397066  0.79078018]\n [-0.12382493  0.34563    -1.47833264]\n [ 0.74405567 -1.60108261  1.64061587]\n [ 0.24011863  0.36303494 -0.96122535]]\n500\n-37.4531282944459\n[[-5.9867499  -0.15247889  0.87153377]\n [-0.04674852  0.35640742 -1.57934947]\n [ 0.80081277 -1.64917964  1.73201631]\n [ 0.21932477  0.37286745 -0.98509536]]\n600\n-33.288433594622504\n[[-6.41538351 -0.15979374  0.9429102 ]\n [-0.01702998  0.36552306 -1.6656888 ]\n [ 0.84540642 -1.68981205  1.80840113]\n [ 0.20156911  0.3811226  -1.00319978]]\n700\n-30.03204096162905\n[[-6.79552404e+00 -1.66226424e-01  1.00727012e+00]\n [ 2.61045873e-03  3.73429808e-01 -1.74125802e+00]\n [ 8.85698880e-01 -1.72502408e+00  1.87415529e+00]\n [ 1.93832334e-01  3.88239555e-01 -1.01770463e+00]]\n800\n-27.40993294164743\n[[-7.13706804 -0.17197845  1.06613355]\n [ 0.01744399  0.38041643 -1.80853759]\n [ 0.92227999 -1.7561167   1.93196559]\n [ 0.19045548  0.39449616 -1.02981809]]\n900\n-25.250601509100907\n[[-7.44720523 -0.17718816  1.12054676]\n [ 0.02959287  0.3866786  -1.86921519]\n [ 0.95566953 -1.78397002  1.98360254]\n [ 0.18906938  0.40007944 -1.04026471]]\n"
     }
    ],
    "source": [
@@ -174,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,18 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "1.0"
-      ]
+      "text/plain": "1.0"
      },
-     "execution_count": 145,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
    "source": [
@@ -221,18 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "0.9866666666666667"
-      ]
+      "text/plain": "0.9866666666666667"
      },
-     "execution_count": 146,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 10
     }
    ],
    "source": [
@@ -263,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
